# Job-Parser-Course-Project

./: README.txt  helper.py  main.py  pyproject.toml
src/: classAPI.py  classJSON.py  classVacancies.py
