[tool.poetry]
name = "job-parser-kurs4-project"
version = "0.1.0"
description = ""
authors = ["vertiporogov <133884681+vertiporogov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "job_parser_kurs4_project"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

